--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_fonts: ^2.0.0
   email_validator: ^2.0.1
   notifications: ^1.1.0
+  http: ^0.13.3
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
